crates/php-parser/tests/snapshots/integration__named_arguments.snap
---
source: crates/php-parser/tests/integration.rs
expression: to_json(&result.program)
---
{
  "stmts": [
    {
      "kind": {
        "Expression": {
          "kind": {
            "FunctionCall": {
              "name": {
                "kind": {
                  "Identifier": "htmlspecialchars"
                },
                "span": {
                  "start": 6,
                  "end": 22
                }
              },
              "args": [
                {
                  "name": "string",
                  "value": {
                    "kind": {
                      "Variable": "str"
                    },
                    "span": {
                      "start": 31,
                      "end": 35
                    }
                  },
                  "unpack": false,
                  "by_ref": false,
                  "span": {
                    "start": 23,
                    "end": 35
                  }
                },
                {
                  "name": "flags",
                  "value": {
                    "kind": {
                      "Identifier": "ENT_QUOTES"
                    },
                    "span": {
                      "start": 44,
                      "end": 54
                    }
                  },
                  "unpack": false,
                  "by_ref": false,
                  "span": {
                    "start": 37,
                    "end": 54
                  }
                },
                {
                  "name": "encoding",
                  "value": {
                    "kind": {
                      "String": "UTF-8"
                    },
                    "span": {
                      "start": 66,
                      "end": 73
                    }
                  },
                  "unpack": false,
                  "by_ref": false,
                  "span": {
                    "start": 56,
                    "end": 73
                  }
                }
              ]
            }
          },
          "span": {
            "start": 6,
            "end": 74
          }
        }
      },
      "span": {
        "start": 6,
        "end": 75
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 75
  }
}
