crates/php-parser/tests/snapshots/integration__namespace_error_then_valid_namespace.snap
---
source: crates/php-parser/tests/integration.rs
expression: "fixture_with_errors(source, &result.errors, &result.program)"
---
=== source ===
<?php namespace ; namespace Foo\Bar;

=== errors ===
expected identifier, found ';'
=== snapshot ===
{
  "stmts": [
    {
      "kind": {
        "Namespace": {
          "name": {
            "parts": [
              "<error>"
            ],
            "kind": "Unqualified",
            "span": {
              "start": 16,
              "end": 16
            }
          },
          "body": "Simple"
        }
      },
      "span": {
        "start": 6,
        "end": 18
      }
    },
    {
      "kind": {
        "Namespace": {
          "name": {
            "parts": [
              "Foo",
              "Bar"
            ],
            "kind": "Qualified",
            "span": {
              "start": 28,
              "end": 35
            }
          },
          "body": "Simple"
        }
      },
      "span": {
        "start": 18,
        "end": 37
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 37
  }
}
