crates/php-parser/tests/snapshots/integration__namespace_missing_name.snap
---
source: crates/php-parser/tests/integration.rs
expression: "fixture_with_errors(source, &result.errors, &result.program)"
---
=== source ===
<?php namespace;

=== errors ===
expected identifier, found ';'
=== snapshot ===
{
  "stmts": [
    {
      "kind": {
        "Namespace": {
          "name": {
            "parts": [
              "<error>"
            ],
            "kind": "Unqualified",
            "span": {
              "start": 15,
              "end": 15
            }
          },
          "body": "Simple"
        }
      },
      "span": {
        "start": 6,
        "end": 17
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 17
  }
}
