crates/php-parser/tests/snapshots/integration__nested_arrays.snap
---
source: crates/php-parser/tests/integration.rs
expression: "fixture(source, &result.program)"
---
=== source ===
<?php [[1, 2], [3, 4]]; ['a' => ['x' => 1], 'b' => ['y' => 2]];
=== snapshot ===
{
  "stmts": [
    {
      "kind": {
        "Expression": {
          "kind": {
            "Array": [
              {
                "key": null,
                "value": {
                  "kind": {
                    "Array": [
                      {
                        "key": null,
                        "value": {
                          "kind": {
                            "Int": 1
                          },
                          "span": {
                            "start": 8,
                            "end": 9
                          }
                        },
                        "unpack": false,
                        "span": {
                          "start": 8,
                          "end": 9
                        }
                      },
                      {
                        "key": null,
                        "value": {
                          "kind": {
                            "Int": 2
                          },
                          "span": {
                            "start": 11,
                            "end": 12
                          }
                        },
                        "unpack": false,
                        "span": {
                          "start": 11,
                          "end": 12
                        }
                      }
                    ]
                  },
                  "span": {
                    "start": 7,
                    "end": 13
                  }
                },
                "unpack": false,
                "span": {
                  "start": 7,
                  "end": 13
                }
              },
              {
                "key": null,
                "value": {
                  "kind": {
                    "Array": [
                      {
                        "key": null,
                        "value": {
                          "kind": {
                            "Int": 3
                          },
                          "span": {
                            "start": 16,
                            "end": 17
                          }
                        },
                        "unpack": false,
                        "span": {
                          "start": 16,
                          "end": 17
                        }
                      },
                      {
                        "key": null,
                        "value": {
                          "kind": {
                            "Int": 4
                          },
                          "span": {
                            "start": 19,
                            "end": 20
                          }
                        },
                        "unpack": false,
                        "span": {
                          "start": 19,
                          "end": 20
                        }
                      }
                    ]
                  },
                  "span": {
                    "start": 15,
                    "end": 21
                  }
                },
                "unpack": false,
                "span": {
                  "start": 15,
                  "end": 21
                }
              }
            ]
          },
          "span": {
            "start": 6,
            "end": 22
          }
        }
      },
      "span": {
        "start": 6,
        "end": 24
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Array": [
              {
                "key": {
                  "kind": {
                    "String": "a"
                  },
                  "span": {
                    "start": 25,
                    "end": 28
                  }
                },
                "value": {
                  "kind": {
                    "Array": [
                      {
                        "key": {
                          "kind": {
                            "String": "x"
                          },
                          "span": {
                            "start": 33,
                            "end": 36
                          }
                        },
                        "value": {
                          "kind": {
                            "Int": 1
                          },
                          "span": {
                            "start": 40,
                            "end": 41
                          }
                        },
                        "unpack": false,
                        "span": {
                          "start": 33,
                          "end": 41
                        }
                      }
                    ]
                  },
                  "span": {
                    "start": 32,
                    "end": 42
                  }
                },
                "unpack": false,
                "span": {
                  "start": 25,
                  "end": 42
                }
              },
              {
                "key": {
                  "kind": {
                    "String": "b"
                  },
                  "span": {
                    "start": 44,
                    "end": 47
                  }
                },
                "value": {
                  "kind": {
                    "Array": [
                      {
                        "key": {
                          "kind": {
                            "String": "y"
                          },
                          "span": {
                            "start": 52,
                            "end": 55
                          }
                        },
                        "value": {
                          "kind": {
                            "Int": 2
                          },
                          "span": {
                            "start": 59,
                            "end": 60
                          }
                        },
                        "unpack": false,
                        "span": {
                          "start": 52,
                          "end": 60
                        }
                      }
                    ]
                  },
                  "span": {
                    "start": 51,
                    "end": 61
                  }
                },
                "unpack": false,
                "span": {
                  "start": 44,
                  "end": 61
                }
              }
            ]
          },
          "span": {
            "start": 24,
            "end": 62
          }
        }
      },
      "span": {
        "start": 24,
        "end": 63
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 63
  }
}
